
##############################################################
# Global
##############################################################

# For defaults, each line has mutually exclusive options (you
# cannot select both Debug and Release).  On each line, the
# first option is the default.
### Defaults ###
Testing Release Debug
Nocredit Mcve Cheq
### Defaults End ###

# The different modes:
#    Testing:  installs to home directory with debugging enabled
#    Release:  /usr/viewtouch/bin and no debugging
#    Debug:    /usr/viewtouch/bin with debugging enabled

### Option Release ###
VIEWTOUCH_PATH  = /usr/viewtouch
DEBUG           =
MALLOC          =
MALLOC_LIB      =
DBGFLAG         =
OPTIMIZE        = -O2 -fno-exceptions -fomit-frame-pointer
TARGET          = release
LICENSE_SERVER  = www.viewtouch.com
### Release End ###

### Option Mcve ###
CREDIT_DEF      = -DCREDITMCVE
CREDIT_PKG      = MCVE
CREDIT_LIB      = -L/usr/local/mcve/lib -lmcve
CREDIT_INC      = -I/usr/local/mcve/include
TERM_CREDIT     = term/term_credit_mcve.o
VT_CCQ_PIPE     =
### Mcve End ###

### Option Cheq ###
CREDIT_DEF      = -DCREDITCHEQ
CREDIT_PKG      = CHEQ
CREDIT_LIB      =
CREDIT_INC      =
TERM_CREDIT     = term/term_credit_cheq.o
VT_CCQ_PIPE     = vt_ccq_pipe
### Cheq End ###

### Option Nocredit ###
CREDIT_DEF      =
CREDIT_LIB      =
CREDIT_INC      =
TERM_CREDIT     = term/term_credit.o
VT_CCQ_PIPE     =
### Nocredit End ###


##############################################################
# FreeBSD
##############################################################

### FreeBSD Mode ###
PLATFORM        = -DBSD
TOUCHSCREEN     =
STRIP           = /usr/bin/strip
MAKE            = /usr/local/bin/gmake
MAKEDEP         = /usr/X11R6/bin/makedepend
KILLALL_CMD     = /usr/bin/killall
### Mode End ###

### FreeBSD IncDirs ###
/usr/include/
/usr/include/freetype2
/usr/X11R6/include
/usr/local/include
gcc2.95.3 /usr/include/g++/
external/
main/
term/
zone/
.
### IncDirs End ###

### FreeBSD Option Testing ###
VIEWTOUCH_PATH  = $(HOME)/tmp/viewtouch
DEBUG           = -DDEBUG=1
MALLOC          =
MALLOC_LIB      =
DBGFLAG         = -ggdb3
OPTIMIZE        =
TARGET          = debug
LICENSE_SERVER  = LICENSESERVERDEBUG
### Testing End ###

### FreeBSD Option Debug ###
VIEWTOUCH_PATH  = /usr/viewtouch
DEBUG           = -DDEBUG=1
MALLOC          =
MALLOC_LIB      =
DBGFLAG         = -ggdb3
OPTIMIZE        =
TARGET          = debug
LICENSE_SERVER  = LICENSESERVERDEBUG
### Debug End ###


##############################################################
# Linux
##############################################################

### Linux Mode ###
PLATFORM        = -DLINUX
TOUCHSCREEN     =
STRIP           = /usr/bin/strip
MAKE            = /usr/bin/make
MAKEDEP         = /usr/X11R6/bin/makedepend
KILLALL_CMD     = /usr/bin/killall
### Mode End ###

### Linux IncDirs ###
/usr/include
/usr/include/freetype2
/usr/X11R6/include
/usr/local/include
gcc32 /usr/include/c++/3.2.3/
gcc32 /usr/include/c++/3.2.3/i386-redhat-linux
gcc33 /usr/include/c++/3.3.4
gcc33 /usr/include/c++/3.3.4/i386-redhat-linux
gcc333 /usr/include/c++/3.3.3
gcc333 /usr/include/c++/3.3.3/i386-redhat-linux
gcc343 /usr/include/c++/3.4.3
gcc343 /usr/include/c++/3.4.3/i386-redhat-linux
gcc296  /usr/include/g++-3/
external/
main/
term/
zone/
.
### IncDirs End ###

### Linux Option Testing ###
VIEWTOUCH_PATH  = /usr/viewtouch
DEBUG           = -DDEBUG=1
MALLOC          =
MALLOC_LIB      =
DBGFLAG         = -ggdb3
OPTIMIZE        =
TARGET          = debug
LICENSE_SERVER  = LICENSESERVERDEBUG
### Testing End ###

### Linux Option Debug ###
VIEWTOUCH_PATH  = /usr/viewtouch
DEBUG           = -DDEBUG=1
MALLOC          =
MALLOC_LIB      =
DBGFLAG         = -ggdb3
OPTIMIZE        =
TARGET          = debug
LICENSE_SERVER  = LICENSESERVERDEBUG
### Debug End ###
